eks/ingress/manifest/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cpr-demo
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: app-ingress
    # Ingress Core Settings
    #kubernetes.io/ingress.class: "alb" (OLD INGRESS CLASS NOTATION - STILL WORKS BUT RECOMMENDED TO USE IngressClass Resource)
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'

    alb.ingress.kubernetes.io/tags: 'Project=Cap Build,Topic=EKS'
    # SSL
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    # alb.ingress.kubernetes.io/certificate-arn: <ARN>
    # alb.ingress.kubernetes.io/ssl-redirect: '443'

    # For creating a Record Set in Route53
    # Prerequisite:
    #  External-DNS Controller is Configured & Running
    external-dns.alpha.kubernetes.io/hostname: k8s.solutions-chapters.click
spec:
  # 1. If "spec.ingressClassName: my-aws-ingress-class" not specified,
  #     will reference default ingress class on this kubernetes cluster
  # 2. Default Ingress class is nothing but for which ingress class
  #     we have the annotation `ingressclass.kubernetes.io/is-default-class: "true"`
  ingressClassName: my-aws-ingress-class   # Ingress Class                       
  # Important Note:
  # In path based routing order is very important,
  #  if we are going to use  "/*" (Root Context), 
  #  try to use it at the end of all rules.

  defaultBackend:
    service:
      name: app3-nginx-nodeport-service
      port:
        number: 80   

  rules:
    - http:
        paths:           
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-nodeport-service
                port: 
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: app2-nginx-nodeport-service
                port: 
                  number: 80
          # Use default backend instead of this path rule. 
          #  Both will work, though defaultBackend is more straightforward.        
          # - path: /
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: app3-nginx-nodeport-service
          #       port: 
          #         number: 80
